--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+*{margin:0;padding:0}.map{height:100vh;width:100vw}
+/*# sourceMappingURL=style.css.map */
